--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@
 /config/master.key
 
 *.swp
+
+# Ignore config rvm file ruby-gemset .ruby-version, for changing branches
+.ruby-gemset
+.ruby-version
